--- a/gold/_posts/2023-09-26-training.md
+++ b/gold/_posts/2023-09-26-training.md
@@ -1,12 +1,11 @@
 ---
-title:  "Home Friendly"
-date:   2023-09-17
-eventDate: Sun, Sep 17, 2023
-type: match
+title: "Training"
+date:   2023-09-25
+eventDate: Tues, Sep 26, 2023
+type: "training"
 venue: Home
-otherTeam: London Legends Red
-meetup: 10.30am
-kickoff: 11.00am
+meetup: 5.30pm
+ends: 7.00pm
 address: Home Ground
 map: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4096.434967515835!2d0.018619900745370215!3d51.4588539779896!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a9c3fea0b1e3%3A0xc607dff4f3a74a24!2sWeigall%20Road%20Sports%20Ground%2C%20London!5e0!3m2!1sen!2suk!4v1695512026822!5m2!1sen!2suk
 categories: jekyll update
