Better map for Long Lane FC 12/11/2023 away match

--- a/gold/_posts/2023-11-12-away.md
+++ b/gold/_posts/2023-11-12-away.md
@@ -8,7 +8,6 @@ otherTeam: Long Lane Football Club
 meetup: 12:00am
 kickoff: 12:30pm
 address: Long Lane Football Club, 2 Dursley Road, Kidbrooke, SE3 8PB
-map: https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2485.4541313436175!2d0.031052300000003856!3d51.468178!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2suk!4v1699698275463!5m2!1sen!2suk
+map: https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1242.7270656718117!2d0.028670498394782338!3d51.468178!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a9b3d8fe8375%3A0x21cc75ada1ea2949!2sLong%20Lane%20Junior%20Football%20Club!5e0!3m2!1sen!2suk!4v1699699023798!5m2!1sen!2suk
 categories: jekyll update
 ---
-
